# ID2Graph

./: .gitignore  CMakeLists.txt  README.md  main.sh  node.h  pipeline.cpp  pipeline_louvain.cpp  q  requirements.txt  run.sh  run_training.sh  temp.py  test.sh  test_metric.cpp  test_secureboost.cpp  test_utils.cpp
.github/workflows/: cmake.yml
data/: Untitled.ipynb  Untitled1.ipynb  breast_cancer.in  calc_drop_importance.py  fi.py  generate_dummydata.py  prep.py
data/avila/: avila_fti.npy  avila_fti_cls.npy
data/breastcancer/: breast_cancer.in  breastcancer.in  breastcancer_1_fti.npy  breastcancer_2_fti.npy  breastcancer_3_fti.npy  breastcancer_4_fti.npy  breastcancer_5_fti.npy  breastcancer_fti.npy
data/car/: untitled.txt
data/diabetes/: Untitled.ipynb
data/drive/: drive_fti.npy
data/dummy/: dummy.csv
data/dummy0/: dummy.csv
data/dummy1/: dummy.csv
data/fars/: fars_fti.npy
data/fraud/: fraud_fti.npy  fraud_fti_cls.npy
data/givemesomecredit/: README.md  Untitled.ipynb  breastcancer_fti.npy  givemesomecredit.in
data/hotel/: Untitled.ipynb
louvain/: community.h  graph.h  louvain.h
mpiscript/: CMakeLists.txt  pipeline_1_train_mpirandomforest.cpp  pipeline_1_train_mpisecureboost.cpp  pipeline_1_train_randomforest.cpp  run.sh  test.sh  test_mpisecureboost.cpp
script/: CMakeLists.txt  build.sh  cleaner.sh  clustering.py  demo_attack.cpp  demo_kmeans.cpp  demo_randomforest_backdoor.cpp  download.sh  make_report.py  network_analysis.py  pipeline.cpp  pipeline_1_train_noattack_secureboost.cpp  pipeline_1_train_noattack_secureforest.cpp  pipeline_1_train_randomforest.cpp  pipeline_1_train_secureboost.cpp  pipeline_1_train_secureforest.cpp  pipeline_1_train_xgboost.cpp  pipeline_1_training.cpp  pipeline_2_clustering.py  pipeline_2_exact.py  pipeline_2_knn.py  pipeline_2_louvain.cpp  pipeline_2_supervised.py  pipeline_2_uniontree.py  pipeline_3_clustering.py  pipeline_3_supervised.py  pipeline_3_vis_union.py  pipeline_4_report.py  pipeline_4_vis_network.py  pipeline_5_report.py  pipeline_5_report_for_backdoor.py  pipeline_louvain.cpp  run.sh  run_backdoor.sh  run_extract_result.sh  run_training.sh  run_training_for_backdoor.sh  test.sh
secureboost/: attack.h  louvain.h  metric.h  node.h  secureboost.h  tree.h  utils.h
test/: CMakeLists.txt  test_dok.cpp  test_louvain.cpp  test_lpmst.cpp  test_metric.cpp  test_paillier.cpp  test_randomforest.cpp  test_secureboost.cpp  test_utils.cpp  test_xgboost.cpp
test/mpi/: CMakeLists.txt  test_mpirandomforest.cpp  test_mpisecureboost.cpp
test/standalone/: test_dok.cpp  test_louvain.cpp  test_randomforest.cpp  test_secureboost.cpp  test_secureforest.cpp  test_utils.cpp  test_xgboost.cpp
(+97 files in other folders)
